[FIX] mrp: prevent qty_producing/product_qty overlap in MO form view
Steps
---
* install mrp
* create new mo for some product
* set a huge `product_qty` ("Quantity") (e.g. 123456789123456789, we
  want to take as much space as possible but not trigger exponential
  notation)
* Confirm > Produce All
* The qty_producing and product_qty fields will overlap and be
illegible

(Note that the order needs to be done and locked, because
if we can still edit the qty_producing the input will be scrollable)

Fix
---
allow the `qty_producing` field to grow;
make the fields scrollable when still too large

opw-3919805

--- a/addons/mrp/static/src/scss/mrp_fields.scss
+++ b/addons/mrp/static/src/scss/mrp_fields.scss
@@ -1,3 +1,8 @@
 .o_field_widget.o_embed_url_viewer iframe {
     aspect-ratio: 3/2;
 }
+
+.overflow-scrollable {
+    overflow-x: auto;
+    scrollbar-width: thin;
+}
